style: increase mobile top padding to avoid burger menu overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -687,7 +687,7 @@ img {
   
   .main-content {
     margin-left: 0;
-    padding: 4rem 1rem 2rem;
+    padding: 5rem 1rem 2rem;
   }
   
   .content-wrapper {
